kubernetes/apps/network/envoy-gateway/app/envoy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${PRIMARY_SECRET_DOMAIN}"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "external.${PRIMARY_SECRET_DOMAIN},external.${SECONDARY_SECRET_DOMAIN},external.${TERTIARY_SECRET_DOMAIN}"
      lbipam.cilium.io/ips: "10.20.50.104"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${PRIMARY_SECRET_DOMAIN/./-}-production-tls
          - kind: Secret
            name: ${SECONDARY_SECRET_DOMAIN/./-}-production-tls
          - kind: Secret
            name: ${TERTIARY_SECRET_DOMAIN/./-}-production-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${PRIMARY_SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      group: Internal
      conditions: ["[STATUS] == 200"]
      client:
        dns-resolver: tcp://${CLUSTER_K8S_GATEWAY_IP}:53
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "internal.${PRIMARY_SECRET_DOMAIN},internal.${SECONDARY_SECRET_DOMAIN},internal.${TERTIARY_SECRET_DOMAIN}"
      lbipam.cilium.io/ips: "10.20.50.103"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${PRIMARY_SECRET_DOMAIN/./-}-production-tls
          - kind: Secret
            name: ${SECONDARY_SECRET_DOMAIN/./-}-production-tls
          - kind: Secret
            name: ${TERTIARY_SECRET_DOMAIN/./-}-production-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: http
    - name: internal-gateway
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
